# Converation_RAG_with-Purchase-Order

./: PO_Documents.py  RAG_Code.ipynb  app.py  document_Parsing.ipynb  extracted_po.xlsx  main.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Test-checkpoint.ipynb
Po_pdf_files/: PO Parsing (1).docx  output.xlsx
